--- a/styles/styles.css
+++ b/styles/styles.css
@@ -99,7 +99,8 @@ span.hidden {
   justify-content: flex-start;
   align-items: center;
   text-align: center;
-  margin-top: 2.85rem;
+  margin-top: 5dvh;
+  padding-top: 2dvh;
   gap: 2rem;
   height: 90dvh;
 }
@@ -113,9 +114,15 @@ span.hidden {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  font-size: 1.25rem;
   padding: 2rem 2rem;
   background-color: rgba(var(--unohana), 0.35);
   backdrop-filter: blur(3px);
+}
+
+.contact-info {
+  display: flex;
+  gap: 1.25rem;
 }
 
 .download-resume {
@@ -124,6 +131,36 @@ span.hidden {
   color: var(--milkywhite);
   border: 1px solid var(--milkywhite);
   border-radius: 5px;
+  transition: all 500ms;
+}
+
+.download-resume:hover {
+  box-shadow: 0px 0px 15px var(--soshoku);
+  transition: all 300ms;
+}
+
+.social-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  border-radius: 5px;
+}
+
+a {
+  all: unset;
+  text-decoration: none;
+  color: inherit;
+}
+.social-info > * * {
+  border-radius: 5px;
+  transition: all 500ms;
+  cursor: pointer;
+}
+.social-info > * :hover {
+  border-radius: 5px;
+  box-shadow: 0px 0px 15px var(--soshoku);
+  transition: all 300ms;
 }
 
 .webgl {
@@ -132,6 +169,33 @@ span.hidden {
   height: 100%;
 }
 
-.honeycomb-wrap {
+.scroll-for-more {
+  margin-top: 8dvh;
+}
+
+.projects-wrap,
+.skills-wrap,
+.about-wrap {
   height: 100dvh;
+}
+
+.profile-pic > img {
+  width: clamp(7rem, 20dvw, 12rem);
+  height: auto;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.project-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.project-card {
+  height: 30rem;
+}
+
+.project-img-wrap {
+  height: 5rem;
 }
