--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,7 @@
   --surface-1: #12161b;
   --surface-2: #171c23;
   --line: #252c34;
+  --prime-theme: rgb(252 126 32);
 
   --gofun: #fffffc;
   --hakuji: #f8f8f8;
@@ -24,6 +25,13 @@
 
   --font-body: "Quicksand", sans-serif, system-ui;
   --font-h1: "Space Grotesk", sans-serif, system-ui;
+
+  --prime-text-bg: linear-gradient(
+    135deg,
+    var(--milkywhite) 0%,
+    var(--prime-theme) 80%,
+    var(--bg) 100%
+  );
 }
 
 body {
@@ -31,7 +39,7 @@ body {
   background: var(--bg);
   color: var(--milkywhite);
   height: 100dvh;
-  width: 100dvw;
+  /* width: 100dvw; */
 }
 
 h2 {
@@ -50,10 +58,28 @@ header {
   align-items: center;
 }
 
-h1 {
+header > p {
+  font-size: clamp(1.5rem, 5vw, 2.5rem);
   font-family: var(--font-h1);
   font-weight: 400;
   padding: 1rem;
+  color: transparent;
+  background: linear-gradient(
+    135deg,
+    var(--prime-theme) 0%,
+    var(--milkywhite) 50%,
+    var(--bg) 100%
+  );
+  background-clip: text;
+}
+
+h1 {
+  font-family: var(--font-h1);
+  font-weight: 800;
+  padding: 1rem;
+  color: transparent;
+  background: var(--prime-text-bg);
+  background-clip: text;
   font-size: clamp(1.5rem, 5vw, 2.5rem);
 }
 
@@ -106,12 +132,12 @@ span.hidden {
   text-align: center;
   margin-top: 5dvh;
   padding-top: 2dvh;
-  gap: 2rem;
+  gap: 1rem;
 }
 .hero-wrap > h2 {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  /* gap: 0.5rem; */
 }
 
 .hero-wrap > p {
@@ -119,7 +145,7 @@ span.hidden {
   flex-direction: column;
   gap: 1rem;
   font-size: 1.25rem;
-  padding: 2rem 2rem;
+  padding: 0.25rem 2rem;
   backdrop-filter: blur(3px);
 }
 
@@ -176,12 +202,6 @@ a {
   margin-top: 8dvh;
 }
 
-.projects-wrap,
-.skills-wrap,
-.about-wrap {
-  height: 100dvh;
-}
-
 .profile-pic > img {
   width: clamp(7rem, 20dvw, 12rem);
   height: auto;
@@ -198,6 +218,7 @@ a {
 .projects-wrap {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 0.15rem;
   padding: 1.25rem;
   margin-top: 3rem;
@@ -206,25 +227,37 @@ a {
 .projects-wrap > h2 {
   align-self: center;
   font-weight: 500;
-  font-size: 2rem;
+  font-size: 3rem;
   letter-spacing: 2px;
+  background: var(--prime-text-bg);
+  background-clip: text;
+  color: transparent;
 }
 
 .project-grid {
   display: grid;
   gap: 2rem;
   grid-template-columns: repeat(1, auto);
+  max-width: 1400px;
+  margin-top: 2rem;
 }
 
 .project-card {
   border-radius: 15px;
   overflow: hidden;
-  border: 2px solid var(--murasakisuishiyou);
+  border: 1px solid transparent;
   backdrop-filter: blur(15px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: all 500ms;
 }
 
 .project-card:hover {
-  border: 2px solid rgb(174, 174, 255);
+  border: 1px solid var(--prime-theme);
+  box-shadow: 0px 0px 20px var(--prime-theme),
+    inset 0px 0px 20px var(--prime-theme);
+  transition: all 350ms;
 }
 
 .project-img-wrap {
@@ -237,7 +270,9 @@ a {
   display: flex;
   align-items: center;
   flex-direction: column;
+  justify-content: space-between;
   gap: 1.65rem;
+  flex: auto;
 }
 
 .project-desc {
