--- a/styles/aboutStyles.css
+++ b/styles/aboutStyles.css
@@ -200,7 +200,8 @@ a {
 .about-connect:hover,
 .about-hero:hover {
   border: 1px solid var(--prime-theme);
-  box-shadow: 0px 0px 20px var(--prime-theme),
+  box-shadow:
+    0px 0px 20px var(--prime-theme),
     inset 0px 0px 20px var(--prime-theme);
   transition: all 350ms;
 }
@@ -297,7 +298,8 @@ a {
 @media (max-width: 768px) {
   .mobile-in-view {
     border: 1px solid var(--prime-theme);
-    box-shadow: 0px 0px 20px var(--prime-theme),
+    box-shadow:
+      0px 0px 20px var(--prime-theme),
       inset 0px 0px 20px var(--prime-theme);
     transition: all 350ms;
   }
